<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>demoSeleniumBasics</groupId>
    <artifactId>demoSeleniumBasics</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <cucumber.ver>1.2.5</cucumber.ver>
        <selenium.ver></selenium.ver>
        <junit.ver></junit.ver>
        <selenium.ver>3.141.59</selenium.ver>
        <junit.jupiter.ver>5.3.2</junit.jupiter.ver>
        <cucumber.jvmdeps.ver>1.0.5</cucumber.jvmdeps.ver>
        <cucumber.ver>1.2.5</cucumber.ver>
        <gherkin.ver>2.12.2</gherkin.ver>
        <selenium.rc.server.ver>1.0.3</selenium.rc.server.ver>
        <surefire.fork.count>5</surefire.fork.count>
        <surefire.failsafe.ver>3.0.0-M1</surefire.failsafe.ver>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->


        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-server</artifactId>
            <version>${selenium.ver}</version>
        </dependency>



        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.jupiter.ver}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.ver}</version>
        </dependency>

        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-core</artifactId>
            <version>${cucumber.ver}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-jvm-deps</artifactId>
            <version>${cucumber.jvmdeps.ver}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>gherkin</artifactId>
            <version>${gherkin.ver}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.ver}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

<build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${surefire.failsafe.ver}</version>
            <configuration>
                <!--<skip>true</skip>-->
                <forkCount>1</forkCount>
                <includes>
                    <include>**/runner/RunCukesTestDataSetUp.java</include>
                </includes>
            </configuration>
            <executions>
                <execution>
                    <phase>verify</phase>
                </execution>
            </executions>
        </plugin>

        <plugin>
            <artifactId>maven-failsafe-plugin</artifactId>
            <version>${surefire.failsafe.ver}</version>
            <configuration>

                <includes>
                    <include>**/runner/RunCukesTest1.java</include>
                    <include>**/runner/RunCukesTest2.java</include>
                    <include>**/runner/RunCukesTest3.java</include>
                    <include>**/runner/RunCukesTest4.java</include>
                    <include>**/runner/RunCukesTest5.java</include>
                    <include>**/runner/RunCukesTest6.java</include>
                </includes>
                <forkCount>${surefire.fork.count}</forkCount>
                <reuseForks>false</reuseForks>
                <argLine>-Duser.language=en</argLine>
                <argLine>-Xmx1024m</argLine>
                <argLine>-XX:MaxPermSize=256m</argLine>
                <argLine>-Dfile.encoding=UTF-8</argLine>
                <useFile>false</useFile>
            </configuration>

            <executions>
                <execution>
                    <goals>
                        <goal>integration-test</goal>
                        <goal>verify</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.0</version>
            <configuration>
                <source>1.7</source>
                <target>1.7</target>
            </configuration>
        </plugin>

    </plugins>
</build>

    <profiles>
        <profile>
            <id>acceptance-tests-with-retry</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <configuration>
                            <skip>false</skip>
                            <systemProperties>
                                <!--<cucumber.options>${cucumber.tags}</cucumber.options>-->
                            </systemProperties>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>